--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ttn-stack",
-  "version": "3.12.0-dev",
+  "version": "3.12.0",
   "description": "The Things Stack",
   "main": "index.js",
   "repository": "https://github.com/TheThingsNetwork/lorawan-stack.git",
