--- a/.goreleaser.release.yml
+++ b/.goreleaser.release.yml
@@ -208,7 +208,7 @@ dockers:
   - goos: linux
     goarch: amd64
     dockerfile: Dockerfile
-    binaries:
+    ids:
       - ttn-lw-cli
       - ttn-lw-stack
     image_templates:
