--- a/.goreleaser.snapshot.yml
+++ b/.goreleaser.snapshot.yml
@@ -46,7 +46,7 @@ dockers:
     goarch: amd64
     dockerfile: Dockerfile
     use_buildx: true
-    ids:
+    binaries:
       - ttn-lw-cli
       - ttn-lw-stack
     build_flag_templates:
@@ -66,7 +66,7 @@ dockers:
     goarch: arm64
     dockerfile: Dockerfile
     use_buildx: true
-    ids:
+    binaries:
       - ttn-lw-cli
       - ttn-lw-stack
     build_flag_templates:
