ci: Fix glob of public dir in tar.gz archives

--- a/.goreleaser.release.yml
+++ b/.goreleaser.release.yml
@@ -70,7 +70,7 @@ archives:
     files:
       - LICENSE
       - README.md
-      - public/**/*
+      - public/**
       - config/completion/*/*
     wrap_in_directory: true
     format_overrides:
