--- a/sdk/js/package.json
+++ b/sdk/js/package.json
@@ -26,7 +26,7 @@
     "@babel/plugin-transform-strict-mode": "^7.2.0",
     "@babel/preset-env": "^7.11.0",
     "eslint": "^6.2.2",
-    "jest": "^25.2.7",
+    "jest": "26.6.3",
     "prettier": "^1.18.2"
   },
   "eslintConfig": {
